fix: Remove Path feature with @since 11